# midnight-scripts

./: .gitignore  Cargo.toml  README.md  TRANSACTION_SUBMISSION.md  midnight_metadata.scale  test_node.sh
src/: main.rs  midnight.rs
static/bboard/: bboard.compact
static/bboard/compiler/: contract-info.json
static/bboard/contract/: index.d.ts  index.js  index.js.map
static/bboard/keys/: post.prover  post.verifier  takeDown.prover  takeDown.verifier
static/bboard/zkir/: post.bzkir  post.zkir  takeDown.bzkir  takeDown.zkir
