[package]
name = "testing-crate"
version = "0.1.0"
edition = "2021"

[dependencies]
midnight-ledger = { path = "../../midnight-ledger/ledger" }
coin-structure = { path = "../../midnight-ledger/coin-structure", package = "midnight-coin-structure" }
zswap = { path = "../../midnight-ledger/zswap", package = "midnight-zswap" }
base-crypto = { path = "../../midnight-ledger/base-crypto", package = "midnight-base-crypto" }
transient-crypto = { path = "../../midnight-ledger/transient-crypto", package = "midnight-transient-crypto" }
storage = { path = "../../midnight-ledger/storage", package = "midnight-storage" }
serialize = { path = "../../midnight-ledger/serialize", package = "midnight-serialize" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
bitvec = "1.0"
scale = { package = "parity-scale-codec", version = "3.0", features = ["derive"] }
subxt = "0.44"
