[package]
name = "testing-crate"
version = "0.1.0"
edition = "2021"

[dependencies]
# The key dependency - same helpers the toolkit uses
midnight-node-ledger-helpers = { git = "https://github.com/midnightntwrk/midnight-node.git", branch = "main", features = [
  "can-panic",
  "test-utils",
] }

# Subxt for node communication
subxt = "0.44"

# Runtime
tokio = { version = "1", features = ["full"] }
hex = "0.4.3"
async-trait = "0.1"
